name:                msc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/msc#readme
license:             BSD3
license-file:        LICENSE
author:              Elie Genard
maintainer:          example@example.com
copyright:           2016 Elie Genard
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable msc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      ,classy-prelude
                      ,containers
                      ,network
                      ,libmpd
                      ,text
                      ,fuzzy
                      ,time
                      ,bytestring
                      ,list-t
                      ,connection
                      ,mtl
                      ,hscurses
                      ,pretty
                      ,htoml
                      ,unordered-containers
                      ,brick
                      ,text-zipper
                      ,microlens
                      ,microlens-th
                      ,microlens-platform >= 0.3.1.0
                      ,vty >= 5.5.0
                      ,process
                      ,vector
                      ,transformers
                      ,data-default
                      ,filepath
                      ,directory >= 1.2.5.0
                      ,template-haskell >= 2.10
  default-language:    Haskell2010
  extensions:         NoImplicitPrelude, OverloadedStrings

test-suite msc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             Spec.hs
  build-depends:       base
                      ,attoparsec
                      ,bytestring
                      ,classy-prelude
                      ,microlens-platform >= 0.3.1.0
                      ,unordered-containers
                      ,text
                      ,time
                      ,QuickCheck
                      ,quickcheck-text
                      ,tasty
                      ,tasty-quickcheck
                      ,tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:         NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/msc
