name:                mushu
version:             0.1.1
synopsis:            Minimalist MPD client
description:         Mushu is a minimalist MPD client with a TUI and an incremental fuzzy finder for your music library
homepage:            https://github.com/elaye/mushu#README.md
license:             BSD3
license-file:        LICENSE
author:              Elie Genard
maintainer:          elaye.github.io@gmail.com
copyright:           2016 Elie Genard
category:            Sound
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mushu
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Library
                      , MPD
                      , TH
                      , Types
                      , UI, UI.Types, UI.Utils
                      , UI.Views.Help, UI.Views.Library, UI.Views.Main, UI.Views.Playlist
                      , UI.Widgets.Help, UI.Widgets.Library, UI.Widgets.Playlist, UI.Widgets.Status, UI.Widgets.Filter, UI.Widgets.Notification
  build-depends:       base >= 4 && < 5
                      ,classy-prelude
                      ,safe-exceptions
                      ,containers
                      ,network
                      ,libmpd
                      ,text
                      ,fuzzy
                      ,time
                      ,bytestring
                      ,list-t
                      ,connection
                      ,mtl
                      ,hscurses
                      ,pretty
                      ,htoml
                      ,unordered-containers
                      ,brick
                      ,text-zipper
                      ,microlens
                      ,microlens-th
                      ,microlens-platform >= 0.3.1.0
                      ,vty >= 5.5.0
                      ,process
                      ,vector
                      ,transformers
                      ,data-default
                      ,filepath
                      ,directory >= 1.2.5.0
                      ,template-haskell >= 2.10
  default-language:    Haskell2010
  default-extensions:         NoImplicitPrelude, OverloadedStrings

test-suite mushu-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             Spec.hs
  build-depends:       base
                      ,classy-prelude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:         NoImplicitPrelude, OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/elaye/mushu
